; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/dht/extr_dht.c_dht_read11.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/dht/extr_dht.c_dht_read11.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DHTLIB_DHT11_WAKEUP = common dso_local global i32 0, align 4
@DHTLIB_OK = common dso_local global i32 0, align 4
@DHTLIB_INVALID_VALUE = common dso_local global i8* null, align 8
@dht_humidity = common dso_local global i8* null, align 8
@dht_temperature = common dso_local global i8* null, align 8
@dht_bytes = common dso_local global i64* null, align 8
@DHTLIB_ERROR_CHECKSUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dht_read11(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i32, i32* @DHTLIB_DHT11_WAKEUP, align 4
  %8 = call i32 @dht_readSensor(i64 %6, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @DHTLIB_OK, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i8*, i8** @DHTLIB_INVALID_VALUE, align 8
  store i8* %13, i8** @dht_humidity, align 8
  %14 = load i8*, i8** @DHTLIB_INVALID_VALUE, align 8
  store i8* %14, i8** @dht_temperature, align 8
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %49

16:                                               ; preds = %1
  %17 = load i64*, i64** @dht_bytes, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 0
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** @dht_humidity, align 8
  %21 = load i64*, i64** @dht_bytes, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 2
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to i8*
  store i8* %24, i8** @dht_temperature, align 8
  %25 = load i64*, i64** @dht_bytes, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64*, i64** @dht_bytes, align 8
  %29 = getelementptr inbounds i64, i64* %28, i64 1
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %27, %30
  %32 = load i64*, i64** @dht_bytes, align 8
  %33 = getelementptr inbounds i64, i64* %32, i64 2
  %34 = load i64, i64* %33, align 8
  %35 = add nsw i64 %31, %34
  %36 = load i64*, i64** @dht_bytes, align 8
  %37 = getelementptr inbounds i64, i64* %36, i64 3
  %38 = load i64, i64* %37, align 8
  %39 = add nsw i64 %35, %38
  store i64 %39, i64* %5, align 8
  %40 = load i64*, i64** @dht_bytes, align 8
  %41 = getelementptr inbounds i64, i64* %40, i64 4
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* %5, align 8
  %44 = icmp ne i64 %42, %43
  br i1 %44, label %45, label %47

45:                                               ; preds = %16
  %46 = load i32, i32* @DHTLIB_ERROR_CHECKSUM, align 4
  store i32 %46, i32* %2, align 4
  br label %49

47:                                               ; preds = %16
  %48 = load i32, i32* @DHTLIB_OK, align 4
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %47, %45, %12
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @dht_readSensor(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
